# WohnFair-cryptographically-auditable-housing-allocation-system

./: .gitattributes  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.work
docs/replication/: replicate-2025-08.md
experiments/results/: fairrent_0.7_42.json  fairsurvival.json  zklease.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx
frontend/app/(dash)/dashboard/: page.tsx
frontend/app/(marketing)/: page.tsx
frontend/components/ui/: Button.tsx  Card.tsx
infra/grafana/dashboards/: wohnfair-dashboard.json
infra/grafana/provisioning/dashboards/: dashboards.yml  wohnfair-dashboard.json
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
scripts/: bench_fairrent.sh  bench_zk.sh  reproduce.sh  seed.sql
services/fairrent/: Dockerfile  README.md  go.mod  go.sum
services/fairrent/api/: server.go
services/fairrent/cmd/fairrentd/: main.go
services/fairrent/config/: config.yaml
services/fairrent/internal/queue/: priority_heap.go
services/fairrent/internal/scheduler/: fairrent.go  fairrent_test.go  metrics.go
services/fairrent/internal/telemetry/: otel.go
services/ml/: Dockerfile  README.md  pyproject.toml
services/ml/config/: config.yaml
services/ml/src/wohnfair_ml/: __init__.py  cli.py  config.py
services/notifications/: Dockerfile  go.mod  go.sum
services/notifications/cmd/notifier/: main.go
services/notifications/tests/: health_test.go
services/orchestration/: Dockerfile  go.mod
services/orchestration/cmd/gateway/: main.go
services/policy-dsl/: Cargo.toml  Dockerfile  build.rs
services/policy-dsl/src/: main.rs
services/proto/wohnfair/common/v1/: types.proto
services/proto/wohnfair/fairrent/v1/: fairrent.proto
services/proto/wohnfair/policy/v1/: policy.proto
services/proto/wohnfair/zklease/v1/: zklease.proto
services/zk-lease/: Cargo.toml  Dockerfile  README.md
services/zk-lease/config/: config.yaml
services/zk-lease/src/: config.rs  error.rs  main.rs
