[package]
name = "policy-dsl"
version = "0.1.0"
edition = "2021"
authors = ["WohnFair Team <team@wohnfair.de>"]
description = "Policy DSL service that compiles housing allocation policies to Rego (OPA) and exposes a gRPC API"
license = "MIT"
repository = "https://github.com/wohnfair/wohnfair"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.12"
tonic = { version = "0.10", features = ["transport"] }
tonic-reflection = "0.10"
tonic-health = "0.10"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"
prometheus = "0.13"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
