[package]
name = "zk-lease"
version = "0.1.0"
edition = "2021"
authors = ["WohnFair Team <team@wohnfair.de>"]
description = "Zero-knowledge proof service for housing lease verification"
license = "MIT"
repository = "https://github.com/wohnfair/wohnfair"
keywords = ["zero-knowledge", "proofs", "housing", "lease", "cryptography"]
categories = ["cryptography", "web-programming::http-client", "web-programming::http-server"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"
tonic-reflection = "0.10"
tonic-health = "0.10"

# Zero-knowledge proofs
halo2 = "0.3"
plonk = "0.1"
bellman = "0.12"
ark-groth16 = "0.4"
ark-snark = "0.4"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"
aes = "0.8"
aes-gcm = "0.10"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# HTTP and web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics and observability
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.20"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
mockall = "0.12"

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "proof_verification"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
